@@ -1,5 +1,6 @@
 Changelog
 
++ added recaptcha function
 + added explanation field
 + supported drivers pdo
 # missing translations in the fileupload
